[metadata]
name = strategoutil
version = 0.1.0
author = Mihhail Samusev, Martijn Goorden
author_email = msam@build.aau.dk
description = Python utility functions library for UPPAAL Stratego
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mihsamusev/strategoutil
project_urls =
    Bug Tracker = https://github.com/mihsamusev/strategoutil/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src