[metadata]
name = strategoutil
version = 0.0.3
author = Mihhail Samusev, Martijn Goorden
author_email = msam@build.aau.dk
description = Python utility functions library for UPPAAL Stratego
long_description = file: README.md
keywords= uppaal, stratego, MPC
license = MIT
license_file = doc/LICENSE
long_description_content_type = text/markdown 
project_urls =
    Source = https://github.com/mihsamusev/strategoutil
    Tracker = https://github.com/mihsamusev/strategoutil/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
platforms = any
python_requires = >=3.6
py_modules = strategoutil

[options.extras_require]
test = pytest